added github link

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Description"
-      content="Lochlan Bennett-Odlum"
-    />
+    <meta name="Description" content="Lochlan Bennett-Odlum (Lochlan Odlum)" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Lochlan Bennett-Odlum</title>
+    <title>Lochlan Bennett-Odlum (Lochlan Odlum)</title>
   </head>
   <body>
     <div id="root"></div>
